# hue-entertainment

./: .pre-commit-config.yaml  AGENTS.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  test.yml
hue_entertainment/: __init__.py  api.py  color.py  constants.py  discovery.py  dtls.py  models.py  session.py
scripts/: setup.sh
tests/: __init__.py  test_color.py  test_discovery.py  test_dtls_handshake.py  test_dtls_streamer.py  test_hue_api.py  test_models.py  test_session.py
